@@ -429,42 +429,42 @@ public class ChunkGeneratorOverworldCustom implements IChunkGenerator
     @Override
     public void populate(int x, int z)
     {
-        // TODO Auto-generated method stub
+        
         
     }
 
     @Override
     public boolean generateStructures(Chunk chunkIn, int x, int z)
     {
-        // TODO Auto-generated method stub
+        
         return false;
     }
 
     @Override
     public List<SpawnListEntry> getPossibleCreatures(EnumCreatureType creatureType, BlockPos pos)
     {
-        // TODO Auto-generated method stub
+        
         return null;
     }
 
     @Override
     public BlockPos getNearestStructurePos(World worldIn, String structureName, BlockPos position, boolean findUnexplored)
     {
-        // TODO Auto-generated method stub
+        
         return null;
     }
 
     @Override
     public void recreateStructures(Chunk chunkIn, int x, int z)
     {
-        // TODO Auto-generated method stub
+        
         
     }
 
     @Override
     public boolean isInsideStructure(World worldIn, String structureName, BlockPos pos)
     {
-        // TODO Auto-generated method stub
+        
         return false;
     }
 }
